--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    /* Establecer un fondo de color bonito */
+    body {
+      background-color: #A8D5BA; /* Color azul claro */
+      font-family: Arial, sans-serif; /* Cambiar la fuente si lo deseas */
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
